--- a/css3.css
+++ b/css3.css
@@ -1,4 +1,4 @@
-#fade {
+#button {
   
   /** ****************************************************
     * CSS Backgrounds and Borders Module Level 3
